tests/ui/from_source.stderr
error: Only one `source` field allowed per struct or struct variant (remember that `#[from]` implies `source`)
  --> $DIR/from_source.rs:10:5
   |
10 |     cause: io::Error,
   |     ^^^^^

error: Only one `#[from]` field allowed per struct or struct variant
  --> $DIR/from_source.rs:20:5
   |
20 |     cause: io::Error,
   |     ^^^^^

error: When deriving `From`, non-`#[from]` fields are not allowed
  --> $DIR/from_source.rs:25:5
   |
25 |     source: io::Error,
   |     ^^^^^^

error: When deriving `From`, non-`#[from]` fields are not allowed
  --> $DIR/from_source.rs:40:5
   |
40 |     msg: String,
   |     ^^^
